--- a/.env.development
+++ b/.env.development
@@ -3,4 +3,4 @@ ENV = 'development'
 
 # base api
 #VUE_APP_BASE_API = '/dev-api'
-VUE_APP_BASE_API = 'http://www.youbaobao.xyz:18082'
+VUE_APP_BASE_API = 'http://localhost:5000'
